package com.example.ePolan.Services.filegenerator;

public enum DocumentFormat {
    PDF, CSV
}